--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,7 +4,7 @@
 		<div class="card">
 			<div class="card-header">
 				<h3>Login</h3>
-				<div class="d-flex justify-content-end social_icon">
+				<div *ngIf="false" class="d-flex justify-content-end social_icon">
 					<span><i class="fab fa-facebook-square"></i></span>
 					<span><i class="fab fa-google-plus-square"></i></span>
 					<span><i class="fab fa-twitter-square"></i></span>
@@ -16,23 +16,20 @@
 						<div class="input-group-prepend">
 							<span class="input-group-text"><i class="fas fa-user"></i></span>
 						</div>
-						<input type="text" class="form-control" placeholder="username">
+						<input type="text" class="form-control" placeholder="login" [formControl]="loginUser">
 					</div>
 					<div class="input-group form-group">
 						<div class="input-group-prepend">
 							<span class="input-group-text"><i class="fas fa-key"></i></span>
 						</div>
-						<input type="password" class="form-control" placeholder="password">
-					</div>
-					<div class="row align-items-center remember">
-						<input type="checkbox">Lembrar
+						<input type="password" class="form-control" placeholder="senha" [formControl]="password">
 					</div>
 					<div class="form-group">
-						<input type="submit" value="Login" class="btn float-right login_btn">
+						<input type="buttom" value="Login" class="btn float-right login_btn" (click)="login()">
 					</div>
 				</form>
 			</div>
-			<div class="card-footer">
+			<div *ngIf="false" class="card-footer" hidden="true">
 				<div class="d-flex justify-content-center links">
 					Não tem uma conta?<a href="#">Cadastrar</a>
 				</div>
