--- a/src/app/pedidos/gerenciar/gerenciar.component.html
+++ b/src/app/pedidos/gerenciar/gerenciar.component.html
@@ -42,19 +42,31 @@
                     <h5 class="text-center">Selecione o App</h5>
                 </div>
                 <div class="col-md-6" style="margin-top: 25px;">
-                    <div><img class="img-logo" src="assets/ifood-logo.png" id="ifood-img" (click)="atualizarparceiro('ifood')"></div>
+                    <div>
+                        <img class="img-logo" src="assets/ifood-logo.png" id="ifood-img" (click)="atualizarparceiro('ifood')">
+                        <input id="ifoodInput" style="margin-top: 5px;" class="form-control" [formControl]="numeroDoPedido" (keyup.enter)="chamarPedido()">
+                    </div>
                 </div>
                 <div class="col-md-6" style="margin-top: 25px;">
-                    <div><img class="img-logo" src="assets/uber-eats-logo.png" id="uberEats-img" (click)="atualizarparceiro('uberEats')"></div>
+                    <div>
+                        <img class="img-logo" src="assets/uber-eats-logo.png" id="uberEats-img" (click)="atualizarparceiro('uberEats')">
+                        <input id="uberEatsInput" style="margin-top: 5px;" class="form-control" [formControl]="numeroDoPedido" (keyup.enter)="chamarPedido()">
+                    </div>
                 </div>
                 <div class="col-md-6" style="margin-top: 25px;">
-                    <div><img class="img-logo" src="assets/rappi-logo.png" id="rappi-img" (click)="atualizarparceiro('rappi')"></div>
+                    <div>
+                        <img class="img-logo" src="assets/rappi-logo.png" id="rappi-img" (click)="atualizarparceiro('rappi')">
+                        <input id="rappiInput" style="margin-top: 5px;" class="form-control" [formControl]="numeroDoPedido" (keyup.enter)="chamarPedido()">
+                    </div>
                 </div>
                 <div class="col-md-6" style="margin-top: 25px;" value="james">
-                    <div value="james"><img class="img-logo" src="assets/james-logo.png" id="james-img" (click)="atualizarparceiro('james')"></div>
+                    <div value="james">
+                        <img class="img-logo" src="assets/james-logo.png" id="james-img" (click)="atualizarparceiro('james')">
+                        <input id="jamesInput" style="margin-top: 5px;" class="form-control" [formControl]="numeroDoPedido" (keyup.enter)="chamarPedido()">
+                    </div>
                 </div>
             </div>
-            <div class="row">
+            <div class="row" hidden="true">
                 <div class="col-md-5" style="padding-top:15px">
                     <label class="form-control-plaintext" >NÚMERO DO PEDIDO</label>
                 </div>
@@ -129,7 +141,6 @@
                 </div>
                 <div class="col-md-3"></div>
             </div>
-
             <div class="row" style="margin-top: 10px;">
                 <div class="col-md-8">
                     <label>MENSAGEM PERSONALIZADA RODAPÉ</label>
